@@ -66,8 +66,8 @@ class RouterHpiAudio : public Router
   //
   Config::DelayState delay_state_set[MAX_INPUTS];
   bool delay_dump[MAX_INPUTS];
-  float delay_change_down;
-  float delay_change_up;
+  float delay_change_down[MAX_INPUTS];
+  float delay_change_up[MAX_INPUTS];
 
   //
   // Callback -> Class
